# constraints-vs-penalties

./: .gitignore  .pre-commit-config.yaml  README.md  concave.py  pyproject.toml  rate_constraints.py  sparsity.py
src/cmp/: __init__.py  rate_constraints.py  sparse.py
src/datasets/: mixture_of_gaussians.py  mnist.py
src/models/: __init__.py
src/models/sparse/: __init__.py  base_model.py  mlp.py
src/models/sparse/layers/: __init__.py  base_layer.py  concrete_utils.py  layer_stats.py  model_stats.py  structured_layers.py  unstructured_layers.py
src/utils/: seed.py  train_sparsity_utils.py
