[project]
name = "constraints-vs-penalties"
version = "0.1.0"
description = "Position: Adopt Constraints Over Penalties in Deep Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cooper-optim>=1.0.1",
    "torch>=2.7.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision==0.22.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numpy>=2.2.6; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy==1.26.4; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "adjusttext>=1.3.0",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = ["ARG", "E", "F", "I", "PERF", "RUF", "UP", "W"]
ignore = [
    "E501",  # Fixed by ruff formatter
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv]
required-version = ">=0.7.3"
